--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ga": "^3.3.0",
     "react-player": "^2.6.1",
     "react-responsive": "^8.1.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-share": "^4.3.1",
     "styled-components": "^5.1.1"
   },
